# clawcierge

./: .dockerignore  .env.example  .gitignore  AGENT_REGISTRY_PLATFORM_PRD.md  ARCHITECTURE_BUILD_PLAN.md  Dockerfile  NEXT_STEPS.md  README.md  alembic.ini  docker-compose.yml  fly.toml  pyproject.toml
agent_sdk/: client.py
agent_sdk/examples/: calendar_agent.py
alembic/: env.py
alembic/versions/: 9feb6386fecd_initial_schema.py
src/clawcierge/: config.py  database.py  errors.py  main.py
src/clawcierge/middleware/: auth.py  errors.py
src/clawcierge/models/: __init__.py  agent.py  api_key.py  capability.py  policy.py  request.py
src/clawcierge/pipeline/: capability_sandbox.py  context.py  executor.py  policy_engine.py
src/clawcierge/routes/: admin.py  agent_ws.py  agents.py  capabilities.py  directory.py  info.py  policies.py  requests.py
src/clawcierge/schemas/: agent.py  capability.py  directory.py  envelope.py  policy.py  request.py
src/clawcierge/services/: agent_registry.py  connection_manager.py  key_manager.py  request_tracker.py
src/clawcierge/templates/: admin_agent_detail.html  admin_dashboard.html  admin_login.html
tests/: conftest.py  test_admin.py  test_agent_to_agent.py  test_agents.py  test_capabilities.py  test_directory.py  test_pipeline.py  test_policies.py  test_request_flow.py  test_websocket.py
